--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,11 @@ p {
 }
 
 a:hover, a:focus {
-  color: #F97794;
+  color: #999999;
 }
 
 a {
-  color: #F97794;
+  color: #999999;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -73,7 +73,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .bg-defult {
-  background: #F97794 !important;
+  background: #999999 !important;
 }
 
 /* ==========================================================================
@@ -106,7 +106,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   bottom: -8px;
   width: 80px;
   height: 2px;
-  background: #F97794;
+  background: #999999;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
@@ -150,7 +150,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .btn-common {
-  background-color: #F97794;
+  background-color: #999999;
   position: relative;
   z-index: 1;
   padding: 12px 32px;
@@ -194,7 +194,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .btn-border:hover {
   color: #ffffff;
-  background-color: #F97794;
+  background-color: #999999;
 }
 
 .btn-lg {
@@ -252,67 +252,67 @@ button:focus {
 }
 
 .facebook a {
-  color: #4867AA;
+  color: #888888;
 }
 
 .facebook a:hover {
-  background: #4867AA;
+  background: #888888;
 }
 
 .twitter a {
-  color: #1DA1F2;
+  color: #666666;
 }
 
 .twitter a:hover {
-  background: #1DA1F2;
+  background: #666666;
 }
 
 .google-plus a {
-  color: #DD4D42;
+  color: #777777;
 }
 
 .google-plus a:hover {
-  background: #DD4D42;
+  background: #777777;
 }
 
 .youtube a {
-  color: #DF2926;
+  color: #888888;
 }
 
 .youtube a:hover {
-  background: #DF2926;
+  background: #888888;
 }
 
 .linkedin a {
-  color: #007BB6;
+  color: #777777;
 }
 
 .linkedin a:hover {
-  background: #007BB6;
+  background: #777777;
 }
 
 .pinterest a {
-  color: #BD081C;
+  color: #555555;
 }
 
 .pinterest a:hover {
-  background: #BD081C;
+  background: #555555;
 }
 
 .dribbble a {
-  color: #EA4C89;
+  color: #999999;
 }
 
 .dribbble a:hover {
-  background: #EA4C89;
+  background: #999999;
 }
 
 .behance a {
-  color: #0B7CFF;
+  color: #777777;
 }
 
 .behance a:hover {
-  background: #0B7CFF;
+  background: #777777;
 }
 
 /* ==========================================================================
@@ -340,7 +340,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #F97794;
+  background-color: #999999;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -393,7 +393,7 @@ button:focus {
   font-size: 14px;
   text-align: center;
   border-radius: 30px;
-  background-color: #F97794;
+  background-color: #999999;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -410,7 +410,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #F97794;
+  background: #999999;
   opacity: 0.5;
   filter: alpha(opacity=80);
 }
@@ -459,11 +459,11 @@ button:focus {
 
 .menu-bg .menu-button:hover {
   cursor: pointer;
-  color: #F97794;
+  color: #999999;
 }
 
 .menu-bg .logo-menu a {
-  color: #F97794;
+  color: #999999;
 }
 
 .menu-bg .navbar-nav .nav-link {
@@ -471,11 +471,11 @@ button:focus {
 }
 
 .menu-bg .navbar-nav .nav-link:hover {
-  color: #F97794 !important;
+  color: #999999 !important;
 }
 
 .menu-bg .navbar-nav .active {
-  color: #F97794 !important;
+  color: #999999 !important;
 }
 
 .menu-button:hover {
@@ -496,11 +496,11 @@ button:focus {
 
 .bg-white .menu-button:hover {
   cursor: pointer;
-  color: #F97794;
+  color: #999999;
 }
 
 .bg-white .logo-menu a {
-  color: #F97794;
+  color: #999999;
 }
 
 .bg-white .navbar-nav .nav-link {
@@ -508,11 +508,11 @@ button:focus {
 }
 
 .bg-white .navbar-nav .nav-link:hover {
-  color: #F97794 !important;
+  color: #999999 !important;
 }
 
 .bg-white .navbar-nav .active {
-  color: #F97794 !important;
+  color: #999999 !important;
 }
 
 .close-button {
@@ -534,7 +534,7 @@ button:focus {
   left: 0;
   width: 0;
   height: 2px;
-  background: #F97794;
+  background: #999999;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
@@ -552,7 +552,7 @@ button:focus {
 .navbar-expand-md .navbar-nav .nav-link:focus,
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover:before {
-  color: #F97794;
+  color: #999999;
 }
 
 .navbar-expand-md .navbar-nav .active > .nav-link,
@@ -560,11 +560,11 @@ button:focus {
 .navbar-expand-md .navbar-nav .nav-link.active:before,
 .navbar-expand-md .navbar-nav .nav-link.open,
 .navbar-expand-md .navbar-nav .open > .nav-link {
-  color: #F97794;
+  color: #999999;
 }
 
 .navbar-expand-md .navbar-toggler {
-  background: #F97794;
+  background: #999999;
   border-radius: 0px;
   margin: 5px;
   cursor: pointer;
@@ -596,8 +596,8 @@ button:focus {
 }
 
 .navbar-expand-md .navbar-toggler:active {
-  border: 1px solid #F97794;
-  color: #F97794;
+  border: 1px solid #999999;
+  color: #999999;
 }
 
 /* ==========================================================================
@@ -617,7 +617,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #F97794;
+  background: #999999;
   opacity: 0.7;
 }
 
@@ -665,7 +665,7 @@ button:focus {
 }
 
 .hero-area .banner_bottom_btn i:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 .intro-img {
@@ -855,7 +855,7 @@ button:focus {
 }
 
 #video-area .banner_bottom_btn i:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 /* ==========================================================================
@@ -879,7 +879,7 @@ button:focus {
 }
 
 #about .box-item .icon i {
-  color: #F97794;
+  color: #999999;
   display: inline-block;
   font-size: 36px;
   margin-bottom: 20px;
@@ -1053,8 +1053,8 @@ button:focus {
 }
 
 .controls .active {
-  color: #F97794 !important;
-  border-color: #F97794;
+  color: #999999 !important;
+  border-color: #999999;
   background: transparent;
 }
 
@@ -1152,7 +1152,7 @@ button:focus {
 .item-boxes .icon i {
   font-size: 30px;
   line-height: 60px;
-  color: #F97794;
+  color: #999999;
 }
 
 .item-boxes h4 {
@@ -1209,27 +1209,27 @@ button:focus {
 
 .services-item .color-1 i {
   background: #FAE3E3;
-  color: #D82928 !important;
+  color: #555555 !important;
 }
 
 .services-item .color-2 i {
   background: #E6F8ED;
-  color: #57D283 !important;
+  color: #999999 !important;
 }
 
 .services-item .color-3 i {
   background: #E3EAFA;
-  color: #457BF4 !important;
+  color: #666666 !important;
 }
 
 .services-item .color-4 i {
   background: #F3EAD6;
-  color: #f1a90a !important;
+  color: #666666 !important;
 }
 
 .services-item .color-5 i {
   background: #E7E6FF;
-  color: #7271FF !important;
+  color: #666666 !important;
 }
 
 .services-item .color-6 i {
@@ -1252,7 +1252,7 @@ button:focus {
 }
 
 .services-item .services-content h3 a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 .services-item:hover {
@@ -1306,7 +1306,7 @@ button:focus {
   font-size: 32px;
   text-align: center;
   margin-bottom: 30px;
-  color: #F97794;
+  color: #999999;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1325,7 +1325,7 @@ button:focus {
 }
 
 .featured-bg .featured-item h3 a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 /* ==========================================================================
@@ -1342,7 +1342,7 @@ button:focus {
 
 .featured-box .featured-icon i {
   font-size: 30px;
-  color: #F97794;
+  color: #999999;
   text-align: center;
   float: left;
   margin-right: 25px;
@@ -1444,7 +1444,7 @@ button:focus {
   line-height: 34px;
   text-align: center;
   width: 34px;
-  color: #F97794;
+  color: #999999;
   font-size: 14px;
   background: #fff;
   border-radius: 50px;
@@ -1454,22 +1454,22 @@ button:focus {
 }
 
 .single-team .social-list .facebook a:hover {
-  background: #4867aa;
+  background: #888888;
   color: #fff;
 }
 
 .single-team .social-list .twitter a:hover {
-  background: #1da1f2;
+  background: #666666;
   color: #fff;
 }
 
 .single-team .social-list .google-plus a:hover {
-  background: #dd4d42;
+  background: #777777;
   color: #fff;
 }
 
 .single-team .social-list .linkedin a:hover {
-  background: #007bb6;
+  background: #777777;
   color: #fff;
 }
 
@@ -1518,7 +1518,7 @@ button:focus {
 }
 
 .testimonial-item .author .author-info h2 a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 .testimonial-item .content-inner {
@@ -1531,7 +1531,7 @@ button:focus {
 }
 
 .testimonial-item .content-inner span {
-  color: #F97794;
+  color: #999999;
 }
 
 .owl-pagination {
@@ -1565,7 +1565,7 @@ button:focus {
 }
 
 .owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span {
-  background: #F97794;
+  background: #999999;
 }
 
 /* ==========================================================================
@@ -1710,7 +1710,7 @@ button:focus {
   color: #fff;
   font-size: 24px;
   display: inline-block;
-  background: #F97794;
+  background: #999999;
   border-radius: 30px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
@@ -1819,7 +1819,7 @@ button:focus {
 }
 
 #blog .blog-item-text h3 a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 .meta-tags {
@@ -1841,7 +1841,7 @@ button:focus {
 }
 
 .meta-tags span a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 /* ==========================================================================
@@ -1906,7 +1906,7 @@ button:focus {
   padding: 5px;
   border-radius: 3px;
   background: #ffffff;
-  border: 1px dashed #346AFE;
+  border: 1px dashed #666666;
 }
 
 .blog-comment .comment-author {
@@ -1939,7 +1939,7 @@ button:focus {
 }
 
 .post-meta ul li a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 /* ==========================================================================
@@ -1959,7 +1959,7 @@ button:focus {
 }
 
 .form-control:focus {
-  border: 1px solid #F97794;
+  border: 1px solid #999999;
   outline: none;
   box-shadow: none;
 }
@@ -1978,7 +1978,7 @@ textarea {
 
 .contact-info i {
   font-size: 20px;
-  color: #F97794;
+  color: #999999;
 }
 
 .contact-info h5 {
@@ -2008,7 +2008,7 @@ textarea {
 }
 
 .list-unstyled li {
-  color: #d9534f;
+  color: #999999;
 }
 
 /* Contact Map */
@@ -2029,7 +2029,7 @@ textarea {
 .toggle-map {
   height: 5px;
   width: 100%;
-  background-color: #F97794;
+  background-color: #999999;
   bottom: 0px;
   text-align: center;
   position: absolute;
@@ -2044,7 +2044,7 @@ textarea {
   -webkit-border-radius: 100%;
   border-radius: 100%;
   background-color: #fff;
-  border: #F97794 3px solid;
+  border: #999999 3px solid;
   position: relative;
   top: -46px;
 }
@@ -2069,7 +2069,7 @@ textarea {
   transition: all 0.3s;
   z-index: 101;
   width: 100%;
-  border-top: #F97794 3px solid;
+  border-top: #999999 3px solid;
 }
 
 #google-map.panel-show {
@@ -2127,7 +2127,7 @@ textarea {
 .subscribe-form .form-wrapper .form-control:focus {
   color: #212121;
   background-color: #fff;
-  border-color: #F97794;
+  border-color: #999999;
   box-shadow: none;
   outline: 0;
 }
@@ -2150,7 +2150,7 @@ textarea {
 
 #subscribe .sub-item-box .icon-box i {
   font-size: 30px;
-  color: #F97794;
+  color: #999999;
 }
 
 #subscribe .sub-item-box .text-box {
@@ -2211,7 +2211,7 @@ footer .menu li a {
 }
 
 footer .menu li a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 .contact-footer {
@@ -2239,7 +2239,7 @@ footer .menu li a:hover {
 }
 
 .contact-footer li span a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 .instagram-footer {
@@ -2264,7 +2264,7 @@ footer .menu li a:hover {
 }
 
 .footer-social li a {
-  background-color: #F97794;
+  background-color: #999999;
   border-radius: 50%;
   color: #fff;
   height: 32px;
@@ -2278,19 +2278,19 @@ footer .menu li a:hover {
 }
 
 .footer-social li .facebook:hover {
-  background-color: #3b5998;
+  background-color: #888888;
 }
 
 .footer-social li .twitter:hover {
-  background-color: #55acee;
+  background-color: #999999;
 }
 
 .footer-social li .linkedin:hover {
-  background-color: #007bb5;
+  background-color: #777777;
 }
 
 .footer-social li .google-plus:hover {
-  background-color: #dd4b39;
+  background-color: #888888;
 }
 
 #copyright {
@@ -2310,7 +2310,7 @@ footer .menu li a:hover {
 }
 
 #copyright p a:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 #copyright .nav-inline .nav-link {
@@ -2320,7 +2320,7 @@ footer .menu li a:hover {
 }
 
 #copyright .nav-inline .nav-link:hover {
-  color: #F97794;
+  color: #999999;
 }
 
 /* ==========================================================================
@@ -2375,7 +2375,7 @@ footer .menu li a:hover {
 
 .counter-item .icon i {
   font-size: 40px;
-  color: #F97794;
+  color: #999999;
 }
 
 .counter-item .fact-count h3 {
