--- a/css/colors/alizarin.css
+++ b/css/colors/alizarin.css
@@ -1,136 +1,136 @@
 a{
-	color: #eee;
+	color: #e74c3c;
 }
 a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 .btn-common{
-    background-color: #eee;
+    background-color: #e74c3c;
 }
 .btn-border:hover{
-	background-color: #eee;
+	background-color: #e74c3c;
 }
 .bg-defult{
-	background: #eee!important;
+	background: #e74c3c!important;
 }
 .controls .active{
-	color: #eee!important;
-    border-color: #eee;
+	color: #e74c3c!important;
+    border-color: #e74c3c;
 }
 #carousel-area .carousel-control-next i, #carousel-area .carousel-control-prev i{
-	background: #eee;
+	background: #e74c3c;
 }
 .section-header .section-title:before{
-	background: #eee;
+	background: #e74c3c;
 }
 .overlay{
-	background: #eee;
+	background: #e74c3c;
 }
 .bg-white .navbar-nav .active{
-	color: #eee!important;
+	color: #e74c3c!important;
 }
 .menu-bg .navbar-nav .active{
-	color: #eee!important;
+	color: #e74c3c!important;
 }
 .menu-bg .navbar-nav .nav-link:hover{
-	color: #eee!important;
+	color: #e74c3c!important;
 }
 .navbar-expand-md .navbar-nav .active > .nav-link, .navbar-expand-md .navbar-nav .nav-link.active, .navbar-expand-md .navbar-nav .nav-link.active::before, .navbar-expand-md .navbar-nav .nav-link.open, .navbar-expand-md .navbar-nav .open > .nav-link{
-	color: #eee;
+	color: #e74c3c;
 }
 .navbar-expand-md .navbar-nav .nav-link:focus, .navbar-expand-md .navbar-nav .nav-link:hover, .navbar-expand-md .navbar-nav .nav-link:hover:before{
-	color: #eee;
+	color: #e74c3c;
 }
 .navbar-expand-md .navbar-nav .nav-link:before{
-	background: #eee;
+	background: #e74c3c;
 }
-.menu-bg .logo-menu a, .menu-bg .menu-button:hover{color: #eee;}
+.menu-bg .logo-menu a, .menu-bg .menu-button:hover{color: #e74c3c;}
 .menu-wrap .navbar-nav li .active,
 .menu-wrap .navbar-nav li .active::before{
-	color: #eee;
+	color: #e74c3c;
 }
 .menu-wrap a:hover, .menu-wrap a:focus{
-	color: #eee;
+	color: #e74c3c;
 }
 .icon-list a::before {
-    background: #eee;
+    background: #e74c3c;
 }
 #about .box-item .icon i{
-	color: #eee;
+	color: #e74c3c;
 }
 .item-boxes .icon{
-	border-color: #eee;
+	border-color: #e74c3c;
 }
 .item-boxes .icon i{
-	color: #eee;
+	color: #e74c3c;
 }
 .featured-box .featured-icon i{
-	color: #eee; 
+	color: #e74c3c; 
 }
 .controls .mixitup-control-active{
-	color: #eee!important;
-	border-color: #eee;
+	color: #e74c3c!important;
+	border-color: #e74c3c;
 }
 .testimonial-item .author .author-info h2 a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 .testimonial-item .content-inner span{
-	color: #eee;
+	color: #e74c3c;
 }
 .owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{
-	background: #eee;
+	background: #e74c3c;
 }
 #subscribe .sub-item-box .icon-box i{
-	color: #eee;
+	color: #e74c3c;
 }
 #blog .blog-item-text h3 a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 .meta-tags span a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 .form-control:focus{
-	border: 1px solid #eee
+	border: 1px solid #e74c3c
 }
 #contact:before{
-	background: #eee;
+	background: #e74c3c;
 }
 .contact-info i{
-	color: #eee;
+	color: #e74c3c;
 }
 .back-to-top i{
-	background-color: #eee;
+	background-color: #e74c3c;
 }
 .single-team .social-list li a{
-	color: #eee;
+	color: #e74c3c;
 }
 .footer-social li a{
-	background: #eee;
+	background: #e74c3c;
 }
 footer .menu li a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 .contact-footer li span a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 .toggle-map{
-	background-color: #eee;
+	background-color: #e74c3c;
 }
 .toggle-map .map-icon{
-	border-color: #eee;
+	border-color: #e74c3c;
 }
 .counter-item .icon i{
-	color: #eee;
+	color: #e74c3c;
 }
 #google-map{
-	border-color: #eee;
+	border-color: #e74c3c;
 }
 #subscribe form input:focus{
-	border-color: #eee;
+	border-color: #e74c3c;
 }
 #copyright p a:hover{
-	color: #eee;
+	color: #e74c3c;
 }
 #copyright .nav-inline .nav-link:hover{
-	color: #eee;
+	color: #e74c3c;
 }
