--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -136,7 +136,7 @@ button::-moz-focus-inner {
   color: #FFF;
   font-style: normal;
   font-size: 28px;
-  font-family: Arial, Baskerville, monospace; }
+  font-family: Ubuntu Condensed, Liberation Serif, monospace; }
   .mfp-close:hover,
   .mfp-close:focus {
     opacity: 1; }
