--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1366px) {
   .section-header .section-title {
     font-size: 22px;
   }
@@ -22,11 +22,13 @@
     font-size: 22px;
     line-height: 38px;
   }
+
   .navbar-expand-md .navbar-nav .nav-link {
     padding: 12px 5px;
     font-size: 13px;
     margin-left: 15px;
   }
+
   .mainmenu-area .menu-button {
     line-height: 46px;
   }
@@ -34,7 +36,8 @@
     font-size: 16px;
   }
   #carousel-area .carousel-item .carousel-caption {
-    top: 35%;
+    top: 10%;
+    text-align: center;
   }
   #carousel-area .carousel-item .carousel-caption h3 {
     font-size: 22px;
@@ -128,7 +131,8 @@
     padding: 0;
   }
   #carousel-area .carousel-item .carousel-caption {
-    top: 40%;
+    top: 10%;
+    text-align: center;
   }
   #carousel-area .carousel-item .carousel-caption h3 {
     font-size: 16px;
@@ -269,7 +273,9 @@
     line-height: 30px;
   }
   #carousel-area .carousel-item .carousel-caption {
-    top: 40%;
+    top: 10%;
+    text-align: center;
+
   }
   #carousel-area .carousel-item .carousel-caption h3 {
     font-size: 13px;
