--- a/css/color-switcher.css
+++ b/css/color-switcher.css
@@ -6,8 +6,8 @@
     font-weight: 700;
 }
 #color-style-switcher {
-    background: #fff;
-    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.14);
+    background: transparent;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.14);
     left: -145px;
     position: fixed;
     top: 170px;
@@ -21,14 +21,14 @@
     padding: 0;
 }
 #color-style-switcher .bottom a.settings {
-    background-color: #fff;
-    box-shadow: 7px 2px 14px 0 rgba(0, 0, 0, 0.14);
+    background-color: transparent;
+    box-shadow: 0px 0px 0px 0 rgba(0, 0, 0, 0.14);
     display: block;
-    height: 45px;
+    height: 110px;
     position: absolute;
-    right: -45px;
+    right: -40px;
     top: 0;
-    width: 45px;
+    width: 35px;
     text-align: center;
 }
 #color-style-switcher .bottom a i{
@@ -37,8 +37,8 @@
 }
 #color-style-switcher select {
     background: none repeat scroll 0 0 #F6F6F6;
-    border: 1px solid #FFFFFF;
-    line-height: 1;
+    border: 0px solid transparent;
+    line-height: 0;
     margin-bottom: 10px;
     padding: 5px 10px;
     width: 150px;
