--- a/css/main.css
+++ b/css/main.css
@@ -63,18 +63,53 @@ a:not([href]):not([tabindex]) {
 }
 
 a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
-  color: #000;
+  color: #333;
   font-weight: normal;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-}
+ ul{
+        padding: 0;
+        list-style: none;
+        background: #fff;
+        margin: 0;
+        padding: 0;
 
-ul li {
-  list-style: none;
-}
+    }
+    ul li{
+        display: inline-block;
+        position: relative;
+        line-height: 21px;
+color: #000;
+        text-align: left;
+        list-style: none;
+    }
+    ul li a{
+        display: block;
+        padding: 8px 25px;
+        color: #000;
+        text-decoration: none;
+    }
+    ul li a:hover{
+        color: #333;
+        background: #fff;
+    }
+    ul li ul.dropdown{
+        min-width: 300%; /* Set width of the dropdown */
+        background: #fff;
+color: #000;
+        display: none;
+        position: absolute;
+        list-style: none;
+        z-index: 999;
+        left: 0;
+    }
+
+ul li:hover ul.dropdown{
+display: block;	/* Display the dropdown */
+    }
+ul li:hover ul.dropdown li{
+display: block;
+    }
 
 /* ==========================================================================
 SECTION HEADER
@@ -95,7 +130,7 @@ SECTION HEADER
   text-transform: uppercase;
   font-family: 'Ubuntu Condensed', 'Ubuntu', sans-serif;
   font-weight: 700;
-  color: #263238;
+  color: #222;
   position: relative;
 }
 
@@ -110,18 +145,6 @@ SECTION HEADER
   transition: 0.3s;
 }
 
-.section-header span {
-  font-size: 60px;
-  color: rgba(0, 0, 0, 0.07);
-  z-index: 2;
-  font-family: 'Ubuntu Condensed', sans-serif;
-  font-weight: 500;
-  text-transform: capitalize;
-  position: absolute;
-  top: 0px;
-  left: 0;
-  width: 100%;
-}
 
 /* ==========================================================================
 BUTTONS
@@ -192,8 +215,8 @@ BUTTONS
 }
 
 .btn-border:hover {
-  color: #ffffff;
-  background-color: #111;
+  color: #fff;
+  background-color: #333;
 }
 
 .btn-lg {
@@ -213,106 +236,6 @@ button:focus {
 
 .clear {
   clear: both;
-}
-
-/* ==========================================================================
-SOCIAL ICONS   
-========================================================================== */
-
-.social-icons {
-  margin-bottom: 20px;
-}
-
-.social-icons ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.social-icons ul li {
-  display: inline;
-}
-
-.social-icons ul li a {
-  display: inline-block;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 15px;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 254, 254, 0.07);
-  line-height: 40px;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  font-size: 16px;
-}
-
-.social-icons ul li a:hover {
-  color: #fff;
-}
-
-.facebook a {
-  color: #4867AA;
-}
-
-.facebook a:hover {
-  background: #4867AA;
-}
-
-.twitter a {
-  color: #1DA1F2;
-}
-
-.twitter a:hover {
-  background: #1DA1F2;
-}
-
-.google-plus a {
-  color: #DD4D42;
-}
-
-.google-plus a:hover {
-  background: #DD4D42;
-}
-
-.youtube a {
-  color: #DF2926;
-}
-
-.youtube a:hover {
-  background: #DF2926;
-}
-
-.linkedin a {
-  color: #007BB6;
-}
-
-.linkedin a:hover {
-  background: #007BB6;
-}
-
-.pinterest a {
-  color: #BD081C;
-}
-
-.pinterest a:hover {
-  background: #BD081C;
-}
-
-.dribbble a {
-  color: #EA4C89;
-}
-
-.dribbble a:hover {
-  background: #EA4C89;
-}
-
-.behance a {
-  color: #0B7CFF;
-}
-
-.behance a:hover {
-  background: #0B7CFF;
 }
 
 /* ==========================================================================
@@ -453,8 +376,8 @@ NAVBAR
 }
 
 .logo-menu a {
-  font-size: 20px;
-  color: #fff;
+  font-size: 17px;
+  color: #1111;
 }
 
 .menu-bg {
@@ -470,23 +393,23 @@ NAVBAR
 
 .menu-bg .menu-button:hover {
   cursor: pointer;
-  color: #ff;
+  color: #333;
 }
 
 .menu-bg .logo-menu a {
-  color: #111;
+  color: #000;
 }
 
 .menu-bg .navbar-nav .nav-link {
-  color: #111 !important;
+  color: #000 !important;
 }
 
 .menu-bg .navbar-nav .nav-link:hover {
-  color: #111 !important;
+  color: #333 !important;
 }
 
 .menu-bg .navbar-nav .active {
-  color: #111 !important;
+  color: #ccc !important;
 }
 
 .menu-button:hover {
@@ -507,19 +430,19 @@ NAVBAR
 
 .bg-white .menu-button:hover {
   cursor: pointer;
-  color: #111;
+  color: #333;
 }
 
 .bg-white .logo-menu a {
-  color: #111;
+  color: #000;
 }
 
 .bg-white .navbar-nav .nav-link {
-  color: #111 !important;
+  color: #000 !important;
 }
 
 .bg-white .navbar-nav .nav-link:hover {
-  color: #111 !important;
+  color: #333 !important;
 }
 
 .bg-white .navbar-nav .active {
@@ -529,12 +452,11 @@ NAVBAR
 .close-button {
   cursor: pointer;
 }
-
 .navbar-expand-md .navbar-nav .nav-link {
-  color: #fff;
-  font-size: 14px;
+  color: #111;
+  font-size: 16px;
   padding: 5px 0px;
-  margin-left: 30px;
+  margin-left: 14px;
   position: relative;
 }
 
@@ -563,7 +485,7 @@ NAVBAR
 .navbar-expand-md .navbar-nav .nav-link:focus,
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover:before {
-  color: #111;
+  color: #333;
 }
 
 .navbar-expand-md .navbar-nav .active > .nav-link,
@@ -575,15 +497,14 @@ NAVBAR
 }
 
 .navbar-expand-md .navbar-toggler {
-  background: #111;
+  background: #fff;
   border-radius: 0px;
-  margin: 5px;
+  margin: 0px;
   cursor: pointer;
   float: right;
 }
-
 .navbar-expand-md .navbar-toggler i {
-  color: #fff !important;
+  color: #111 !important;
 }
 
 .mainmenu-area .navbar-nav .nav-link {
@@ -608,7 +529,7 @@ NAVBAR
 
 .navbar-expand-md .navbar-toggler:active {
   border: 1px solid #111;
-  color: #fff;
+  color: #111;
 }
 /* ==========================================================================
 HERO AREA ========================================================================== */
@@ -675,7 +596,7 @@ HERO AREA ======================================================================
 }
 
 .hero-area .banner_bottom_btn i:hover {
-  color: #111;
+  color: #333;
 }
 
 .intro-img {
@@ -865,7 +786,7 @@ HERO AREA ======================================================================
 }
 
 #video-area .banner_bottom_btn i:hover {
-  color: #111;
+  color: #333;
 }
 
 /* ==========================================================================
@@ -1218,33 +1139,33 @@ HERO AREA ======================================================================
 }
 
 .services-item .color-1 i {
-  background: #FAE3E3;
-  color: #D82928 !important;
+  background: #fff;
+  color: #ddd !important;
 }
 
 .services-item .color-2 i {
-  background: #E6F8ED;
-  color: #57D283 !important;
+  background: #eee;
+  color: #555 !important;
 }
 
 .services-item .color-3 i {
-  background: #E3EAFA;
-  color: #457BF4 !important;
+  background: #eee;
+  color: #444 !important;
 }
 
 .services-item .color-4 i {
-  background: #F3EAD6;
-  color: #f1a90a !important;
+  background: #fff;
+  color: #ccc !important;
 }
 
 .services-item .color-5 i {
-  background: #E7E6FF;
-  color: #7271FF !important;
+  background: #eee;
+  color: #777 !important;
 }
 
 .services-item .color-6 i {
-  background: #DEDEDE;
-  color: #35393D !important;
+  background: #ddd;
+  color: #333 !important;
 }
 
 .services-item .services-content {
@@ -1258,11 +1179,11 @@ HERO AREA ======================================================================
 }
 
 .services-item .services-content h3 a {
-  color: #272727;
+  color: #222;
 }
 
 .services-item .services-content h3 a:hover {
-  color: #111;
+  color: #333;
 }
 
 .services-item:hover {
@@ -1330,11 +1251,11 @@ HERO AREA ======================================================================
 }
 
 .featured-bg .featured-item h3 a {
-  color: #272727;
+  color: #222;
 }
 
 .featured-bg .featured-item h3 a:hover {
-  color: #111;
+  color: #333;
 }
 
 /* ==========================================================================
@@ -1367,7 +1288,7 @@ HERO AREA ======================================================================
 }
 
 .featured-box:hover {
-  background: #fbfbfb;
+  background: #fff;
   box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.35);
 }
 
@@ -1462,7 +1383,7 @@ HERO AREA ======================================================================
   margin-bottom: 5px;
   font-size: 18px;
   font-weight: 500;
-  color: #263238;
+  color: #222;
 }
 
 .single-team .team-details p {
@@ -1489,22 +1410,22 @@ HERO AREA ======================================================================
 }
 
 .single-team .social-list .facebook a:hover {
-  background: #4867aa;
+  background: #444;
   color: #fff;
 }
 
 .single-team .social-list .twitter a:hover {
-  background: #1da1f2;
+  background: #111;
   color: #fff;
 }
 
 .single-team .social-list .google-plus a:hover {
-  background: #dd4d42;
+  background: #ddd;
   color: #fff;
 }
 
 .single-team .social-list .linkedin a:hover {
-  background: #007bb6;
+  background: #000;
   color: #fff;
 }
 
@@ -1549,7 +1470,7 @@ HERO AREA ======================================================================
 }
 
 .testimonial-item .author .author-info h2 a {
-  color: #484848;
+  color: #444;
 }
 
 .testimonial-item .author .author-info h2 a:hover {
@@ -1613,7 +1534,7 @@ HERO AREA ======================================================================
   border: 1px solid #eaeaea;
   text-align: center;
   border-radius: 4px;
-  background-color: #FFFFFF;
+  background-color: #fff;
   box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
@@ -1627,14 +1548,14 @@ HERO AREA ======================================================================
 
 .pricing-table .pricing-details h2 {
   font-size: 18px;
-  color: #546E7A;
+  color: #555;
   font-weight: 500;
   padding-top: 15px;
   padding-bottom: 15px;
 }
 
 .pricing-table .pricing-details .price {
-  color: #263238;
+  color: #222;
   font-size: 36px;
   line-height: 40px;
   font-weight: 500;
@@ -1648,7 +1569,7 @@ HERO AREA ======================================================================
   font-size: 12px;
   line-height: 15px;
   font-weight: 400;
-  color: #A2A2A2;
+  color: #aaa;
 }
 
 .pricing-table .pricing-details ul li {
@@ -1662,7 +1583,7 @@ HERO AREA ======================================================================
 
 .pricing-table .plan-button {
   padding: 30px 0;
-  background: #f9f9f9;
+  background: #fff;
 }
 
 .pricing-big {
@@ -2040,7 +1961,7 @@ textarea {
 }
 
 .list-unstyled li {
-  color: #d9534f;
+  color: #ddd;
 }
 
 /* Contact Map */
@@ -2131,7 +2052,7 @@ textarea {
 }
 
 .subscribe-form .form-wrapper {
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 58px 40px;
   border-radius: 4px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
@@ -2146,7 +2067,7 @@ textarea {
   width: 100%;
   font-size: 14px;
   box-shadow: none;
-  color: #848484;
+  color: #888;
   text-transform: capitalize;
   background: #f7f7f7;
   border: 1px solid transparent;
@@ -2157,7 +2078,7 @@ textarea {
 }
 
 .subscribe-form .form-wrapper .form-control:focus {
-  color: #212121;
+  color: #222;
   background-color: #fff;
   border-color: #111;
   box-shadow: none;
@@ -2208,16 +2129,16 @@ textarea {
 .block-title {
   font-size: 14px;
   font-weight: 500;
-  color: #263238;
+  color: #222;
   margin-bottom: 30px;
   text-transform: uppercase;
   position: relative;
 }
 
 footer .footer-Content {
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 60px 0;
-  color: #546E7A;
+  color: #555;
 }
 
 .textwidget {
@@ -2227,7 +2148,7 @@ footer .footer-Content {
 }
 
 .textwidget p {
-  color: #546E7A;
+  color: #555;
 }
 
 footer .menu {
@@ -2239,7 +2160,7 @@ footer .menu li {
 }
 
 footer .menu li a {
-  color: #546E7A;
+  color: #555;
 }
 
 footer .menu li a:hover {
@@ -2267,7 +2188,7 @@ footer .menu li a:hover {
 }
 
 .contact-footer li span a {
-  color: #546E7A;
+  color: #555;
 }
 
 .contact-footer li span a:hover {
@@ -2310,23 +2231,23 @@ footer .menu li a:hover {
 }
 
 .footer-social li .facebook:hover {
-  background-color: #3b5998;
+  background-color: #333;
 }
 
 .footer-social li .twitter:hover {
-  background-color: #55acee;
+  background-color: #555;
 }
 
 .footer-social li .linkedin:hover {
-  background-color: #007bb5;
+  background-color: #000;
 }
 
 .footer-social li .google-plus:hover {
-  background-color: #dd4b39;
+  background-color: #ddd;
 }
 
 #copyright {
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 20px 0 10px;
   border-top: 1px solid #eaeaea;
   color: #546E7A;
@@ -2338,7 +2259,7 @@ footer .menu li a:hover {
 }
 
 #copyright p a {
-  color: #546E7A;
+  color: #555;
 }
 
 #copyright p a:hover {
@@ -2346,7 +2267,7 @@ footer .menu li a:hover {
 }
 
 #copyright .nav-inline .nav-link {
-  color: #546E7A;
+  color: #555;
   padding: 10px 0;
   margin-left: 10px;
 }
@@ -2420,4 +2341,3 @@ footer .menu li a:hover {
   font-size: 18px;
   margin-bottom: 0;
 }
-
