--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) and (max-width: 1366px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   .section-header .section-title {
     font-size: 22px;
   }
@@ -22,13 +22,14 @@
     font-size: 22px;
     line-height: 38px;
   }
-
+.navbar-nav {
+     flex-flow: column wrap;
+   }
   .navbar-expand-md .navbar-nav .nav-link {
-    padding: 12px 5px;
-    font-size: 13px;
-    margin-left: 15px;
+    padding: 4px 3px;
+    font-size: 11px;
+    margin-left: 2px;
   }
-
   .mainmenu-area .menu-button {
     line-height: 46px;
   }
@@ -36,8 +37,7 @@
     font-size: 16px;
   }
   #carousel-area .carousel-item .carousel-caption {
-    top: 10%;
-    text-align: center;
+    top: 35%;
   }
   #carousel-area .carousel-item .carousel-caption h3 {
     font-size: 22px;
@@ -107,19 +107,22 @@
   .bg-white .collapse.show {
     background: #fff;
   }
+ .navbar-nav {
+     flex-flow: column wrap;
+   }
   .navbar-toggleable-sm > .container {
     width: 100%;
     padding-left: 30px;
     padding-right: 30px;
   }
   .navbar-expand-md .navbar-brand, .navbar-expand-md .navbar-toggler {
-    margin: 12px 15px;
+    margin: 5px 6px;
   }
   .navbar-expand-md .navbar-nav .active > .nav-link, .navbar-expand-md .navbar-nav .nav-link.active, .navbar-expand-md .navbar-nav .nav-link.active::before, .navbar-expand-md .navbar-nav .nav-link.open, .navbar-expand-md .navbar-nav .open > .nav-link {
     background: #ddd;
   }
   .navbar-expand-md .navbar-nav .nav-link {
-    padding: 4px 12px;
+    padding: 4px 6px;
     text-align: center;
     margin-bottom: 3px;
     margin-left: 0;
@@ -131,8 +134,7 @@
     padding: 0;
   }
   #carousel-area .carousel-item .carousel-caption {
-    top: 10%;
-    text-align: center;
+    top: 40%;
   }
   #carousel-area .carousel-item .carousel-caption h3 {
     font-size: 16px;
@@ -243,6 +245,10 @@
   .bg-faded {
     background: #fff !important;
   }
+.navbar-brand {
+font-size: 13px;
+}
+
   .navbar-expand-md .navbar-brand, .navbar-expand-md .navbar-toggler {
     margin: 12px 15px;
   }
@@ -273,9 +279,7 @@
     line-height: 30px;
   }
   #carousel-area .carousel-item .carousel-caption {
-    top: 10%;
-    text-align: center;
-
+    top: 40%;
   }
   #carousel-area .carousel-item .carousel-caption h3 {
     font-size: 13px;
