--- a/css/main.css
+++ b/css/main.css
@@ -1749,6 +1749,10 @@ margin-left: 10px;
 color: #111;
 }
 .st-2, .st-sticky-share-buttons, .st-right, .st-toggleable, .st-has-labels, .st-btn, .st-first, .st-last, .st-label {
--webkit-filter:grayscale(100%);
-filter:grayscale(100%);
+  -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: url(grayscale.svg); /* Firefox 4+ */
+    filter: gray; /* IE 6-9 */
 }
