--- a/css/main.css
+++ b/css/main.css
@@ -1748,11 +1748,17 @@ margin-left: 10px;
 #copyright .nav-inline .nav-link:hover {
 color: #111;
 }
-.st-2, .st-sticky-share-buttons, .st-right, .st-toggleable, .st-has-labels, .st-btn, .st-first, .st-last, .st-label img {
-  -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
-    filter: url(grayscale.svg); /* Firefox 4+ */
-    filter: gray; /* IE 6-9 */
+.st-custom-button[data-network] {
+-webkit-filter:grayscale(100%);
+filter:grayscale(100%);
+background-color: #000;
+display: inline-block;
+padding: 5px 10px;
+cursor: pointer;
+font-weight: bold;
+color: #fff;
+&:hover, &:focus {
+text-decoration: underline;
+background-color: #ccc;
 }
+
