--- a/css/main.css
+++ b/css/main.css
@@ -1446,19 +1446,21 @@ Blog
   ========================================================================== */
 .form-control {
   width: 100%;
-  margin-bottom: 20px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 10px;
   padding: 15px 30px;
   font-size: 14px;
   border-radius: 30px;
-  border: 1px solid transparent;
-  background: #f5f5f5;
+  border: 2px solid #333;
+  background: #eee;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
 
 .form-control:focus {
-  border: 1px solid #111;
+  border: 1px solid #000;
   outline: none;
   box-shadow: none;
 }
@@ -1475,11 +1477,6 @@ textarea {
   margin-bottom: 15px;
 }
 
-.contact-info i {
-  font-size: 20px;
-  color: #111;
-}
-
 .contact-info h5 {
   margin-top: 5px;
   font-size: 18px;
@@ -1492,7 +1489,7 @@ textarea {
 }
 
 #contact {
-  background: #ffffff;
+  background: #fff;
   position: relative;
   overflow: hidden;
 }
@@ -1507,7 +1504,7 @@ textarea {
 }
 
 .list-unstyled li {
-  color: #ddd;
+  color: #ccc;
 }
 
 /* Contact Map */
