--- a/index.css
+++ b/index.css
@@ -1,18 +1,16 @@
 /* Based on Wing v1.0.0-beta (http://usewing.ml) */
 /* Copyright to Kabir Shah under MIT License */
 
-/* BASE STYLES */
 * {
 box-sizing: border-box;
+margin: 0px 0px 0px 0px;
+padding: 0px 0px 0px 0px;
 }
-html,
 body {
 animation: fadein 2s;
-margin: 0;
-padding: 0;
 background: #fff;
 scroll-behavior: smooth;
-transition: all 0.4s ease;
+font-family: "Ubuntu Condensed", "Helvetica";
 }
 
 /* FADEIN (page transition) */
@@ -28,72 +26,60 @@ opacity: 1;
 animation-name: fadein;
 }
 
-/* NAVBAR & TITLE */
-.bar {
+/* NAV */
+.navbar {
 position: fixed;
-display: flex;
-width: 100%;
-height: 46px;
-background-image: linear-gradient(to top, #eee, #fff);
-box-shadow: 1px 1px #ccc;
-justify-content: center;
-align-items: center;
-}
-.bar p { 
 display: block;
-line-height: 22px;
-color: #222;
-font-family: "Ubuntu Condensed", "Helvetica";
-font-size: 24px;
-font-weight: bold;
-vertical-align: baseline;
+width: 100%;
+height: 50px;
+background-image: linear-gradient(to top, #ddd, #fff);
+box-shadow:  0px 5px 5px 0px rgba(111,111,111, 0.5);
+text-align: center;
 }
-a {
-color: #222;
-line-height: 20px;
-font-family: "Ubuntu Condensed", "Helvetica";
-font-size: 20px;
-font-weight: bold;
-
-text-decoration: none;
-}
-a:hover {
-display: inline-block;
-color: #000;
-text-decoration: none;
-}
-
-/* NAVMENU */
 .nav {
-position: fixed;
-background: none;
+display: inline-block;
+float: center;
+vertical-align: top;
+}
+.nav ul {
+list-style-type: none;
+}
+.nav li {
 float: left;
+padding: 0px 7px;
+line-height: 50px;
+}
+.nav li a {
+font-size: 17px;
+font-weight: bold;
+text-decoration: none;
+color: #000;
+}
+.nav li a:hover {
+color: #777;
+}
+@media screen and (max-width: 768px) {
+.nav {
+background: none;
+float: center;
 }
 #menu-icon {
-animation: fadein 3s;
-position: fixed;
-top: 2px;
-left: 12px;
 display:inline-block;
 background: url("img/nav/menu.png") center;
 display: hidden;
-width: 32px;
-height: 46px;
+width: 150px;
+height: 50px;
 }
 #menu-icon:hover {
 opacity: 0.7;
 }
 .nav ul, nav:active ul { 
-animation: fadein 1s;
 display: none;
-position: fixed;
-background-image: linear-gradient(to top, #fff, #eee);
-border: 2px solid #ddd;
-border-radius: 0px 0px 20px 0px;
-left: 0px;
-top: 30px;
+background-image: linear-gradient(to top, #fff, #ddd);
+box-shadow:  5px 5px 5px 0px rgba(111,111,111, 0.5);
+margin: -4px;
 width: 150px;
-padding: 0px 0px 5px 0px;
+border-radius: 0px 0px 22px 22px;
 white-space: nowrap;
 }
 .nav:hover ul {
@@ -102,80 +88,50 @@ overflow: hidden;
 }
 .nav ul li {
 width: 100%;
-margin: 0px 0px 0px 0px;
 padding: 10px;
 line-height: 18px;
+}
+.nav a {
+line-height: 20px;
+font-size: 20px;
+font-weight: bold;
+color: #222;
+text-decoration: none;
+}
+.nav a:hover {
 display: inline-block;
-float: left;
-}
-.nav ul li:hover {
-background: #aaa;
-}
-
-/* NAVLINKS */
-.navlinks {
-position: fixed;
-display: absolute;
-background: none;
-right: 12px;
-text-align: right;
-margin: 6px 0px 0px 0px;
-}
-.navlinks a {
-padding: 0px 0px 0px 0px;
-}
-.navlinks a:hover {
-opacity: 0.7;
-}
-.navlinks-mobile {
-display: none;
-}
-@media screen and (max-width: 768px) {
-.navlinks {
-display: none;
-}
-.navlinks-mobile {
-position: fixed;
-display: block;
-background: none;
-top: 12px;
-right: 10px;
-text-align: center;
-margin: 10px 0px 0px 0px;
+color: #000;
+text-decoration: none;
 }
 }
 
 /* HEADER */
 .parallax {
 display: flex;
-width: 100%;
-height: 100%;
-margin: 0px 0px 0px 0px;
-padding: 46px 0px 0px 0px;
+background: #fff;
+max-width: 100%;
+padding: 50px 0px 0px 0px;
+background-attachment: fixed;
+object-fit: none;
 justify-content: center;
 align-content: flex-start;
 }
 .header {
+display: inline-block;
 width: 768px;
-height: 100%;
 background: transparent;
-margin: 0px 0px 0px 0px;
-padding: 0px 0px 0px 0px;
-justify-content: center;
-align-content: flex-start;
+height: 100%;
 text-align: center;
 }
 /* HEADER LOGO */
 .logo {
 width: 768px;
-max-width: 100%;
 max-height: 100%;
-object-fit: contain;
+object-fit: cover;
 }
 .logo-mobile {
 height: 300px;
-max-width: 100%;
-max-height: 387px;
+margin: 0 auto;
 display: none;
 }
 @media screen and (max-width: 768px) {
@@ -184,166 +140,151 @@ display:none;
 }
 .logo-mobile {
 display: block;
-width: 768px;
-max-width: 100%;
-max-height: 387px;
-object-fit: contain;
 }
 }
 
 /* HEADER TITLES */
 h1 {
-margin: 0px 5px 0px 5px;
-padding: 0px 0px 0px 0px;
-line-height: 52px;
-font-family: "Day Roman", "Times";
-font-size: 52px;
+line-height: 67px;
+color: #000;
+font-size: 67px;
 }
 h2 {
-margin: 0px 5px 0px 5px;
-padding: 0px 0px 0px 0px;
-line-height: 28px;
+line-height: 37px;
 color: #333;
-font-family: "Day Roman", "Times";
-font-size: 28px;
+font-size: 37px;
 }
 h3 {
-margin: 10px 5px 0px 5px;
-padding: 0px 0px 0px 0px;
-line-height: 20px;
-color: #000;
-font-family: "Day Roman", "Times";
-font-size: 20px;
-font-style: italic;
+line-height: 35px;
+color: #222;
+font-size: 35px;
+font-weight: normal;
 }
 @media screen and (max-width: 768px) {
 h1 {
-line-height: 6.81vw;
-font-size: 6.81vw;
+line-height: 47px;
+font-size: 47px;
 }
 h2 {
-line-height: 27px;
-font-size: 27px;
+line-height: 26px;
+font-size: 26px;
 }
 h3 {
-line-height: 16px;
-font-size: 16px;
-}
-}
-
-/* HEADER CALL BUTTONs */
-.call {
-display: inline-block;
-line-height: 20px;
+line-height: 22px;
 font-size: 20px;
-margin: 20px 10px;
-padding: 10px 10px;
-background-image: linear-gradient(to top, #eee, #fff);
-border: 1px solid #ddd;
-border-radius: 20px;
-box-shadow: 2px 2px #ccc;
 }
-.call:hover {
-background-image: linear-gradient(to top, #fff, #eee);
-color: #333;
-opacity: 0.7;
-border: 1px solid #bbb;
-box-shadow: none;
-}
-.call:active {
-opacity: 0;
 }
 
 /* FLEXBOX */
 .container {
 display: block;
-margin: 0px 0px 0px 0px;
-padding: 0px 0px 0px 0px;
+padding: 50px 0px 0px 0px;
 width: 100%;
 }
 .row {
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
-flex-basis: 768px; /* cols starting size */
+flex-basis: 768px;
 flex-grow: 1; 
 flex-shrink: 1;
 width: 768px;
 margin: 0px auto; /* centers row */
-justify-content: center; /* cols on center */
-align-items: flex-start; /* cols on top */
-margin-bottom: 16px;
+justify-content: center; 
+align-items: flex-start; 
 }
 .row .col {
-align-items: flex-start;
 flex-grow: 1;
 flex-shrink: 1;
-flex-basis: 50%;
+flex-basis: 33%;
 justify-content: center;
 align-items: center;
+text-align: center;
 border-radius: 20px;
-}
-.img-div {
-text-align: center;
-}
-.col img {
-max-width: 300px;
-}
-.col h3 {
-font-size: 20px;
-text-align: center;
-margin: 10px 0px 10px 0px;
-padding: 0px 0px 0px 0px;
-}
-p {
-text-align: justify;
-margin: 0px 0px 0px 0px;
-padding: 0px 5% 0px 5%;
-font-family: "Day Roman", "Times";
-font-size: 17px;
-font-weight: normal;
-}
-.button-div {
-text-align: center;
-}
-.button {
-display: inline-block;
-width: 90%;
-line-height:20px
-font-size: 20px;
-margin: 3px 20px;
-padding: 5px 20px;
-background-image: linear-gradient(to top, #eee, #fff);
-border: 1px solid #ddd;
-border-radius: 20px;
-box-shadow: 2px 2px #ccc;
-}
-.button:hover {
-background-image: linear-gradient(to top, #fff, #eee);
-color: #333;
-opacity: 0.7;
-border: 1px solid #bbb;
-box-shadow: none;
-}
-.button:active {
-opacity: 0;
 }
 @media screen and (max-width: 768px) {
 .row {
 min-width: 300px;
 max-width: 90%;
 }
-.row .col,
-.row [class*=" col-"] {
-flex-grow: 0;
-flex-basis: 100%;
-}
 }
 
-/* CREDITS */
-/* NAV MENU: http://bit.ly/absolute-menu */
-/* CSS DEVELOPMENT 
-https://getbootstrap.com
-https://glitch.com
-https://css-tricks.com
-https://codepen.io */
+/* TEXT TYPOGRAPHY */
+h4 {
+margin: 10px 0px 10px 0px;
+font-size: 30px;
+text-align: center;
+font-style: normal;
+font-weight: bold;
+color: #000;
+}
+h5 {
+font-size: 17px;
+font-weight: normal;
+text-align: center;
+}
+p {
+text-align: justify;
+font-size: 17px;
+font-weight: normal;
+}
+a {
+color: #000;
+}
+a:hover {
+color: #777;
+}
+span {
+font-size: 14px;
+}
+
+/* BUTTONS */
+.button {
+display: inline-block;
+background-image: linear-gradient(to top, #ddd, #fff);
+box-shadow:  0px 3px 3px 0px rgba(111,111,111, 0.5);
+margin: 10px 10px 0px 10px;
+padding: 15px 20px;
+border: 1px solid #ccc;
+border-radius: 14px;
+line-height: 19px;
+font-size: 19px;
+font-weight: bold;
+text-decoration: none;
+color: #000;
+}
+.button:hover {
+background-image: linear-gradient(to top, #eee, #ccc);
+box-shadow: none;
+text-decoration: none;
+color: #777;
+}
+
+/* SOCIAL MEDIA */
+.socialmedia {
+display: flex;
+flex-direction: row;
+flex-grow: 1;
+flex-shrink: 1;
+flex-basis: 32px;
+flex-wrap: nowrap;
+position: fixed;
+width: 100%;
+padding: 5px ;
+bottom: 0px;
+background-image: linear-gradient(to bottom, #ddd, #fff);
+box-shadow:  0px -5px 5px 0px rgba(144,144,144, 0.5);
+justify-content: center; 
+align-items: center; 
+text-align: center;
+}
+.socialmedia a {
+margin: auto 1px;
+}
+.socialmedia a:hover {
+opacity: 0.7;
+}
+.socialmedia img {
+height: 100%;
+width:100%;
+}
