--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ padding: 0px 0px 0px 0px;
 }
 body {
 animation: fadein 2s;
-background: #fff;
+background-image: linear-gradient(to right, #fff, #eee);
 scroll-behavior: smooth;
 font-family: "Ubuntu Condensed", "Helvetica";
 }
@@ -77,7 +77,7 @@ opacity: 0.7;
 .nav ul, nav:active ul { 
 display: none;
 background-image: linear-gradient(to top, #fff, #ddd);
-box-shadow:  5px 5px 5px 0px rgba(111,111,111, 0.5);
+box-shadow:  0px 5px 5px 0px rgba(444,444,444, 0.5);
 margin: -4px;
 width: 150px;
 border-radius: 0px 0px 22px 22px;
@@ -113,10 +113,11 @@ background: #fff;
 max-width: 100%;
 min-height: 300px;
 padding: 50px 0px 0px 0px;
-background-attachment: fixed;
-object-fit: none;
+background: no-repeat center center fixed;
+background-size: cover;
 justify-content: center;
 align-content: flex-start;
+box-shadow:  0px -5px 5px 0px rgba(111,111,111, 0.5);
 }
 .header {
 display: inline-block;
@@ -164,16 +165,16 @@ font-weight: normal;
 }
 @media screen and (max-width: 768px) {
 h1 {
-line-height: 47px;
-font-size: 47px;
+line-height: 31px;
+font-size: 31px;
 }
 h2 {
-line-height: 26px;
-font-size: 26px;
+line-height: 17px;
+font-size: 17px;
 }
 h3 {
-line-height: 22px;
-font-size: 20px;
+line-height: 16px;
+font-size: 16px;
 }
 }
 
@@ -296,4 +297,14 @@ opacity: 0.7;
 .socialmedia img {
 height: 100%;
 width:100%;
+}
+.socialmediamobile {
+display: none;
+}
+@media screen and (max-width: 768px) {
+.socialmedia {
+display: none;
+}
+.socialmediamobile {
+display: flex;
 }
