--- a/index.css
+++ b/index.css
@@ -306,7 +306,7 @@ margin: 0px 0px;
 min-width: 300px;
 width: 100%;
 height: 300px;
-background: no-repeat center center;
+background: no-repeat center center fixed;
 background-size: 100% 100%;
 box-shadow:  0px -3px 5px 0px rgba(33,33,33,0.3);
 }
